Ignore thraxrewrite-tester history file

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ ubuntu-*-console.log
 # Ignore resulting file
 cuneiform-latin.far
 
+# Ignore thraxrewrite-tester history file
+.rewrite-tester-history
